[package]
name = "devctm"
version = "0.2.0"
authors = ["Clifford T. Matthews <ctm@devctm.com>"]
edition = "2018"

[dependencies]
actix = "0.9.0"
actix-rt = "1.0.0"
actix-web = { version = "2.0", features = ["openssl"] }
listenfd = "0.3"
maud = { version = "0.21" }
phf = { version = "0.8", features = ["macros"] }
env_logger = "0.7"
# acme-lib = "0.7"
acme-lib = { version = "0.6", git = "https://github.com/ctm/acme-lib", branch = "alternate_jwt_error" }
actix-files = "0.2"
futures = "0.3"
openssl = "0.10"

[build-dependencies]
rsass = "0.12"
walkdir = "2"
